Fixing about page layout add overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,6 +364,7 @@ main {
 
 /* About page */
 
+
 .hero-about {
   margin-top: 66px;
   height: 300px;
@@ -392,15 +393,19 @@ main {
   margin-top: 0;
   display: flex;
   flex-direction: row;
+  height: 100vh;
+  /* overflow: hidden; */
 }
+
 .aside-left,
 .aside-right {
   flex: 1;
   background: url("../images/about-section2.png") no-repeat center/cover;
 }
 .about-content {
-  flex: 2;
+  flex: 5;
   padding: 1rem;
+  overflow: auto;
 }
 .scroll-box {
   width: 100%;
@@ -423,6 +428,7 @@ main {
   margin-top: 20px;
   border-radius: 10px;
 }
+
 .how-it-all-began-container {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -472,7 +478,8 @@ main {
   margin-bottom: 20px;
 }
 .about-valentina-text,
-.about-creator-text {
+.about-creator-text,
+.our-story-text {
   background-color: white;
   padding: 10px;
   /* box-shadow: inset -5px -5px 10px; */
@@ -663,6 +670,9 @@ label {
     text-align: center;
     margin-top: 30px;
   }
+  .our-story-text p {
+    font-size: 1.4rem;
+  }
   .our-story-cotainer {
     display: flex;
     flex-direction: row;
@@ -838,6 +848,7 @@ label {
   .main-about-layout {
     display: flex;
     flex-direction: row;
+    overflow: hidden;
   }
   .aside-left,
   .aside-right {
@@ -845,7 +856,7 @@ label {
     background-color: #4dfc21;
   }
   .about-content {
-    flex: 3;
+    flex: 5;
     padding: 1rem;
   }
   .our-story-container {
